start implementing user dashboard

--- a/src/package.json
+++ b/src/package.json
@@ -37,6 +37,7 @@
   "homepage": "https://github.com/sivteck/gitlub#readme",
   "dependencies": [
     "express",
+    "express-session",
     "nodegit",
     "neon-cli",
     "pg",
